--- a/config/config.json
+++ b/config/config.json
@@ -17,7 +17,7 @@
     "username": "root",
     "password": "root",
     "database": "bluebutton",
-    "host": "https://fierce-ocean-20863.herokuapp.com",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   }
 }
